# jetson_tui

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: default.toml
logs/2026_05_29/14_09_02/: accelerometers.tsv  euler_angles.tsv  gyroscopes.tsv  quaternions.tsv
logs/2026_05_29/14_09_50/: accelerometers.tsv  euler_angles.tsv  gyroscopes.tsv  quaternions.tsv
logs/2026_05_29/15_40_49/: accelerometers.tsv  euler_angles.tsv  gyroscopes.tsv  quaternions.tsv
src/jetson_imu_tui/: __init__.py  __main__.py  app.py  config.py  imu_service.py  recorder.py  ring_buffer.py  web_server.py
src/jetson_imu_tui/cls/: __init__.py  classifier.py  nn.py  preprocess.py  service.py
src/jetson_imu_tui/cls/model/: __init__.py  model.pt
src/jetson_imu_tui/screens/: folder_modal.py  frequency_modal.py  main_screen.py  plot_screen.py
src/jetson_imu_tui/styles/: app.tcss
src/jetson_imu_tui/widgets/: braille_canvas.py  console_log.py  imu_readout.py  status_panel.py
tools/: parity_check_cls.py
