[project]
name = "jetson-imu-tui"
version = "0.1.0"
description = "Textual TUI for streaming and recording two BNO055 IMUs on the Jetson"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "textual>=8.0,<9",
    "imu-python==0.1.1",
    # imu-python's base modules import adafruit_extended_bus unconditionally
    # even though it lives in its [hw] extra. Pull it in so plain `pip install .`
    # works on dev hosts without the rest of the Jetson driver stack.
    "adafruit-extended-bus>=1.0.2",
    "loguru>=0.7,<1",
]

[project.optional-dependencies]
hw = ["imu-python[hw]==0.1.1"]

[project.scripts]
jetson-imu-tui = "jetson_imu_tui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jetson_imu_tui"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
