[project]
name = "jetson-imu-tui"
version = "0.1.0"
description = "Headless web server for streaming, recording, and browser-plotting two BNO055 IMUs on the Jetson"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "flask>=3,<4",
    # Official Bosch BNO055 driver + CircuitPython compat layer (Blinka), reading the
    # chip's onboard fusion directly. ExtendedI2C selects the I2C bus by number (1, 7).
    "adafruit-circuitpython-bno055>=5.4.0",
    "adafruit-extended-bus>=1.0.2",
    "Adafruit-Blinka>=8.0.0",
    "loguru>=0.7,<1",
    "numpy>=1.21,<2",
    # TOML parsing on Python 3.10; tomllib is stdlib from 3.11 onward
    "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
# Real-time CLS inference. On the Jetson, torch is installed from NVIDIA's wheels rather
# than PyPI, so it is an optional extra, not a hard dependency. CLS self-disables if absent.
cls = ["torch>=2"]

[project.scripts]
jetson-imu-tui = "jetson_imu_tui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jetson_imu_tui"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
